tsdemux: don't leak PES headers with errors

When a PES header has errors, unref the buffer.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=674801